--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,34 @@ jobs:
       - image: debian:stable
 #     resource_class: xlarge
     steps:
-      - run: |
-          apt-get update -y
-          apt-get install wget -y
-          wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_debian.sh -O script.sh && chmod +x script.sh
-          ./script.sh 
-          # Check that script worked
-          PATH="/opt/julia-1.9.3/bin:$PATH"
-          cd
-          cd test
-          julia --project=. -e 'using DataCurator'
-
+      - run:
+            name: Run test
+            command: |
+                 no_output_timeout: 40m \
+                 apt-get-update-y
+                 apt-get install wget -y
+                 wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_debian.sh -O script.sh && chmod +x script.sh
+                 ./script.sh
+                 PATH="/opt/julia-1.9.3/bin:$PATH"
+                 cd
+                 cd test
+                 julia --project=. -e 'using DataCurator'
+            # apt-get update -y
+            # apt-get install wget -y
+            # wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_debian.sh -O script.sh && chmod +x script.sh
+            # ./script.sh 
+      # - run: 
+      #     command: |
+      #     apt-get update -y
+      #     apt-get install wget -y
+      #     wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_debian.sh -O script.sh && chmod +x script.sh
+      #     ./script.sh 
+      #     # Check that script worked
+      #     PATH="/opt/julia-1.9.3/bin:$PATH"
+      #     cd
+      #     cd test
+      #     julia --project=. -e 'using DataCurator'
+      #     no_output_timeout: 30m
           
 workflows:
   test_build:
