--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
             name: Run test
             no_output_timeout: 40m
             command: |
-                 apt-get-update-y
+                 apt-get update -y
                  apt-get install wget -y
                  wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_debian.sh -O script.sh && chmod +x script.sh
                  ./script.sh
