--- a/example_recipes/ermito.toml
+++ b/example_recipes/ermito.toml
@@ -7,5 +7,5 @@ inputdirectory = "testdir"
 [any]
 all=true
 conditions = ["is_dir"]
-actions=[["filter_mcsdetect", 3, "*[0-2].tif"]]
+actions=[["filter_mcsdetect", 3, .1, 3, "*[0-2].tif"]]
 # Change to "*[1-2].tif" to match only files ending in 1.tif and 2.tif, for example
