Prepare for network features

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,8 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 EllipsisNotation = "da5c29d0-fa7d-589e-88eb-ea29b0a81949"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
+GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 IOCapture = "b5f81e59-6552-4d32-b1f0-c071b021bf89"
@@ -28,12 +30,14 @@ MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Plotly = "58dd65bb-95f3-509e-9936-c39a10fdeae7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
+SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 Slack = "40bba58d-c7f1-4fe3-926e-2f246c890c3c"
 SlurmMonitor = "e02b837c-d203-40fc-8e6b-ea2c0c38557b"
 SmlmTools = "bd0e0daa-fc13-11e8-3c42-ad9bbc1c8ca1"
